[package]
name = "castellan"
version = "0.1.0-dev"
edition = "2024"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[dependencies]
rig-core = "0.31.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
# rig-surrealdb = "0.1.0"
# surrealdb = "3.0.0" long compile times, not being used yet disabled for now
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["std", "env-filter", "fmt", "json"] }
tracing-appender = "0.2.4"
tracing-futures = "0.2.5"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
dotenv = "0.15.0"
